--- a/tex/config/commands.tex
+++ b/tex/config/commands.tex
@@ -1,1 +1,8 @@
-\renewcommand{\L}{\mathcal{L}}
+\DeclareSIUnit\parsec{pc}
+\DeclareSIUnit\year{yr}
+
+\newcommand{\describe}[2]{
+	\begin{description}
+		\item[#1] {#2}
+	\end{description}
+}	
