--- a/tex/config/layout.tex
+++ b/tex/config/layout.tex
@@ -3,16 +3,20 @@
 % -------------------------
 
 
-
-% CROWN QUARTO, guessed bleed
-\usepackage[paperwidth=18.90cm,
-            paperheight=24.58cm]{geometry}
+% For printing on A4
+\usepackage[includemp,
+            a4paper,
+            layoutwidth=18.90cm,
+            layoutheight=24.58cm,
+            layouthoffset=1.05cm,
+            layoutvoffset=2.56cm,
+            ]{geometry}
 
 \newgeometry{includemp,
             top=2.170cm,
             bottom=3.510cm,
-            inner=2.1835cm,
-            outer=2.1835cm,
+            inner=1.668cm,
+            outer=2.699cm,
             marginparwidth=4cm, % Fixed for now
             marginparsep=0.4cm}
 \savegeometry{with-margin}
@@ -20,48 +24,17 @@
 \newgeometry{ignoremp,
             top=2.170cm,
             bottom=3.510cm,
-            inner=2.1835cm,
-            outer=2.1835cm}
+            inner=1.668cm,
+            outer=2.699cm}
 \savegeometry{no-margin}
 
-% CROWN QUARTO, full bleed
-% \usepackage[includemp,
-%             paperwidth=19.54cm,
-%             paperheight=25.22cm,
-%             % showframe,
-%             layoutwidth=18.90cm,
-%             layoutheight=24.58cm,
-%             layouthoffset=0.32cm,
-%             layoutvoffset=0.32cm,
-%             top=2.170cm,
-%             bottom=3.510cm,
-%             inner=2.1835cm,
-%             outer=2.1835cm,
-%             marginparwidth=4cm, % Fixed for now
-%             marginparsep=0.4cm]{geometry}
-
-% For printing on A4
-% \usepackage[includemp,
-%             a4paper,
-%             layoutwidth=18.90cm,
-%             layoutheight=24.58cm,
-%             layouthoffset=1.05cm,
-%             layoutvoffset=2.56cm,
-%             top=2.170cm,
-%             bottom=3.510cm,
-%             inner=1.668cm,
-%             outer=2.699cm,
-%             marginparwidth=4cm, % Fixed for now
-%             marginparsep=0.4cm]{geometry}
 
 
+\usepackage{floatrow}  % Set up captions of floats
+\usepackage{marginfix} % Make marginpars float freely
+\usepackage{sidenotes} % Footnotes as sidenotes
 
-\usepackage{floatrow}           % Set up captions of floats
-\usepackage{marginfix}          % Make marginpars float freely
-\usepackage{sidenotes}   % Footnotes as sidenotes
-% \extrafloats{100}               % extra floats
-
-% WHY IS CHANGING THE FONT SIZE OF SIDENOTES SO COMPLICATED?
+% WHY IS CHANGING THE FONT SIZE OF SIDENOTES SO COMPLICATED? THIS IS WHY LATEX IS HORRIBLE.
 \makeatletter
 \RenewDocumentCommand\sidenotetext{oo+m}{%
   \IfValueTF{#1}{%
@@ -96,7 +69,4 @@
 
 
 % Figure captions with no indentation
-% \setcapindent{0pt}
-
-
-
+\setcapindent{0pt}
