--- a/tex/config/preamble.tex
+++ b/tex/config/preamble.tex
@@ -1,36 +1,28 @@
-% Golden ratio proportions on crown quarto
-
-
 \input{tex/config/layout}
 \input{tex/config/toc}
 \input{tex/config/fonts}
 
 
 
-
-
-
-\usepackage{polyglossia}   % Correct hyphenation
+\usepackage{polyglossia}
 \setdefaultlanguage{english}
 
 \usepackage{csquotes}
-\usepackage{lipsum}
-\usepackage{subfig}                 % Subfigures
 \usepackage{booktabs}               % Nicer tables
 \usepackage{xcolor}
+\usepackage{enumitem}
+
 \definecolor{primary_color}{RGB}{214,35,0}
 
 
 
-
+\usepackage{tabu} % tables
 \usepackage{multirow}
 \usepackage{multicol}
+\usepackage[version=4]{mhchem}
 \setlength\columnseprule{.4pt}
-
-
-\usepackage{newtheorem}
 
 \input{tex/config/headings}
 \input{tex/config/scrpagestyles}
 
-\usepackage[british]{tref}
+\input{tex/config/tref}
