--- a/tex/front/contents.tex
+++ b/tex/front/contents.tex
@@ -1,6 +1,10 @@
 \cleardoublepage
 \tableofcontents
 
+\vfill
+\emph{Source:} \url{https://github.com/thomabir/astrophysics-ii}
+\vfill
+
 % \cleardoublepage
 % \listoffigures
 % \cleardoublepage
