Add figure ionization

--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -555,9 +555,14 @@ The ionization fraction $x_e$ is the ratio between the number density of electro
 \begin{align*}
 	x_e \defeq \frac{n_e}{n_b}
 \end{align*}
-For given initial conditions, the ionization fraction can be calculated as a function of $z$ by solving the Boltzmann equation.
+For given initial conditions, the ionization fraction can be calculated as a function of $z$ by solving the Boltzmann equation, see \cref{fig:ionization}
 
-TODO slide
+\begin{marginfigure}
+	\centering
+	\includegraphics[width=\textwidth]{img/ionization.png}
+	\caption{The ionization $X_e$ as a function of redshift. Before recombination (at high redshift), the universe is fully ionized with $X_e=1$. The Saha solution assumes thermal equilibrium, which is only valid until recombination. After the freeze-out, a residual ionization fraction ($X_e \approx \num{e-3}$)remains.}
+	\label{fig:ionization}
+\end{marginfigure}
 
 \subsection{Recombination}
 
